<resources>
    <string name="app_name">Consulta Fácil</string>

    <string name="title_meus_agendamentos">Meus Agendamentos</string>
    <string name="desc_sem_agendamentos">Sem Agendamentos</string>
    <string name="title_cadastrar">Criar Conta</string>
    <string name="title_choice_convenio">Escolha um Convênio</string>
    <string name="title_choice_especialidade">Escolha uma Especialidade</string>
    <string name="title_choice_prestador">Escolha um Prestador</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_alterar_senha">Alterar Senha</string>
    <string name="perfil">Perfil</string>
    <string name="salvar">Salvar</string>


    <!-- Menu -->
    <string name="edit">Editar</string>
    <string name="edit_password">Alterar Senha</string>
    <string name="sign_out">Sair</string>
    <!-- /Menu -->

    <string name="desc_consulta_facil_lockup">Logo Consulta Fácil</string>
    <string name="desc_consulta_facil">O aplicativo para agendar consultas</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>

    <string name="sign_in">Entrar</string>
    <string name="create_account">Criar Conta</string>

    <string name="authentication_failed">Autenticação Falhou!</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="field_sexo_required">Informe o Sexo</string>
    <string name="field_password_invalid">A senha deve conter pelo menos 6 caracteres</string>

    <string name="loading">Carregando…</string>
</resources>